--- a/workflows/dast-scan.yml
+++ b/workflows/dast-scan.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run AccuKnox DAST Scan
         uses: accuknox/dast-scan-action@v1.0.0
         with:
-          target_url: "http://testphp.vulnweb.com"
+          target_url: "https://comsource.cz"
           accuknox_endpoint: ${{ secrets.ACCUKNOX_ENDPOINT }}
           tenant_id: ${{ secrets.TENANT_ID }}
           accuknox_token: ${{ secrets.ACCUKNOX_TOKEN }}
